{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 77,
  "lineage": "b4842d02-cbcb-8017-76fc-0a59fd38bd3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bd59005bfe0567e",
            "arn": "arn:aws:ec2:us-east-1:361769560846:elastic-ip/eipalloc-07bd59005bfe0567e",
            "association_id": "eipassoc-0bba6503ff92ffa68",
            "domain": "vpc",
            "id": "eipalloc-07bd59005bfe0567e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df9d2769944014ce",
            "private_dns": "ip-11-0-10-47.ec2.internal",
            "private_ip": "11.0.10.47",
            "public_dns": "ec2-54-92-183-97.compute-1.amazonaws.com",
            "public_ip": "54.92.183.97",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "tf_eip"
            },
            "tags_all": {
              "Name": "tf_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:internet-gateway/igw-0aaf499cfc911b8d4",
            "id": "igw-0aaf499cfc911b8d4",
            "owner_id": "361769560846",
            "region": "us-east-1",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bd59005bfe0567e",
            "association_id": "eipassoc-0bba6503ff92ffa68",
            "connectivity_type": "public",
            "id": "nat-06870b59d2c11e418",
            "network_interface_id": "eni-0df9d2769944014ce",
            "private_ip": "11.0.10.47",
            "public_ip": "54.92.183.97",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080370a16589cd35c",
            "tags": {
              "Name": "tf_nat_gateway"
            },
            "tags_all": {
              "Name": "tf_nat_gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:route-table/rtb-0adfc88a15c4e0670",
            "id": "rtb-0adfc88a15c4e0670",
            "owner_id": "361769560846",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06870b59d2c11e418",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_private_route_table"
            },
            "tags_all": {
              "Name": "tf_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_nat_gateway",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:route-table/rtb-03d47899dc1ecfd4c",
            "id": "rtb-03d47899dc1ecfd4c",
            "owner_id": "361769560846",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aaf499cfc911b8d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public_route_table"
            },
            "tags_all": {
              "Name": "tf_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02700444fd94e1329",
            "region": "us-east-1",
            "route_table_id": "rtb-0adfc88a15c4e0670",
            "subnet_id": "subnet-034d087e3daab0ba6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_nat_gateway",
            "aws_route_table.tf_private_rt",
            "aws_subnet.tf_private_subnet-1",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea5b06d11944903",
            "region": "us-east-1",
            "route_table_id": "rtb-0adfc88a15c4e0670",
            "subnet_id": "subnet-0a355516df5b6a0b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.tf_eip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_nat_gateway",
            "aws_route_table.tf_private_rt",
            "aws_subnet.tf_private_subnet-2",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c7cd369f2df432",
            "region": "us-east-1",
            "route_table_id": "rtb-03d47899dc1ecfd4c",
            "subnet_id": "subnet-080370a16589cd35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet-1",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6d2016b4c68862e",
            "region": "us-east-1",
            "route_table_id": "rtb-03d47899dc1ecfd4c",
            "subnet_id": "subnet-05ec7ceb55038cb77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet-2",
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:subnet/subnet-034d087e3daab0ba6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034d087e3daab0ba6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769560846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:subnet/subnet-0a355516df5b6a0b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a355516df5b6a0b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769560846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:subnet/subnet-080370a16589cd35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080370a16589cd35c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769560846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:subnet/subnet-05ec7ceb55038cb77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec7ceb55038cb77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769560846",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "tags_all": {
              "kubernetes": "eks-cluster",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d8240ba2cddd4248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769560846:vpc/vpc-0d8240ba2cddd4248",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-03b7c99a0fdb9618a",
            "default_route_table_id": "rtb-0b9bb97cfc18cec97",
            "default_security_group_id": "sg-024b8db820c4a272b",
            "dhcp_options_id": "dopt-0943dc14ba002e289",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8240ba2cddd4248",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9bb97cfc18cec97",
            "owner_id": "361769560846",
            "region": "us-east-1",
            "tags": {
              "Name": "Eks VPC"
            },
            "tags_all": {
              "Name": "Eks VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}